word wrap mobile fix

--- a/assets/scss/partials/_base.scss
+++ b/assets/scss/partials/_base.scss
@@ -284,6 +284,19 @@ h2 br {
 
 a, p, h1, h2, h3, h4, span {
 	@include r(480) {
-		white-space: nowrap;
+		overflow-wrap: break-word;
+		word-wrap: break-word;
+
+		-ms-word-break: break-all;
+		/* This is the dangerous one in WebKit, as it breaks things wherever */
+		word-break: break-all;
+		/* Instead use this non-standard one: */
+		word-break: break-word;
+
+		/* Adds a hyphen where the word breaks, if supported (No Blink) */
+		-ms-hyphens: auto;
+		-moz-hyphens: auto;
+		-webkit-hyphens: auto;
+		hyphens: auto;
 	}
 }
